# polymarket-weather-bot

./: .env  .env.example  00_COMECE_AQUI.md  ARCHITECTURE.md  AVIATION_API_GUIDE.md  CHANGELOG.md  CHANGELOG_TIMESTAMPS.md  Cargo.toml  DEPLOY_RENDER.md  DUAS_APIS_GUIA.md  Dockerfile  ERRO_EXPLICADO.md  EXPLICACAO_DETALHADA.md  IMPLEMENTACAO_COMPLETA.md  LICENSE  QUICK_START.md  README.md  SETUP_PT_BR.md  TESTE_TIMESTAMPS.md  TIMESTAMP_DETECTION.md  TROUBLESHOOTING.md  run-prod.sh  run.sh  setup.sh  test-metar.sh
.devcontainer/: devcontainer.json
src/: config.rs  main.rs  telegram.rs
src/weather/: aviation.rs  mod.rs  noaa.rs  openmeteo.rs  types.rs
